--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     <nav>
       <ul>
         <li class="active"><a href="#home">Home</a></li>
-        <li><a href="#about">About KTP</a></li>
-        <li><a href="#members">Members</a></li>
+        <li><a href="about.html">About KTP</a></li>
+        <li><a href="members.html">Members</a></li>
       </ul>
       <div class="coming-soon">More coming soon!</div>
     </nav>
   </div>
   <main>
     <section id="home" class="main-section">
-      <img src="KTP_Logos_Letters_KTP_Logo.png" alt="KTP Logo" class="main-logo">
-      <h1>Welcome to Kappa Theta Pi!</h1>
+      <img src="KTP_Logos_Letters_KTP_Logo.png" alt="KTP Logo" class="main-logo large-logo">
+      <h1 class="main-title larger-title">Welcome to Kappa Theta Pi!</h1>
       <h2 class="chapter-subtitle">Alpha Gamma Chapter</h2>
-      <div class="notice">
+      <div class="notice centered-notice">
         This website is still being worked on! Please check back frequently or follow our Instagram for more updates.
       </div>
       <div class="interest-form-link prominent">
