adding philo page

--- a/philanthropy.html
+++ b/philanthropy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kappa Theta Pi - Members</title>
+  <title>Kappa Theta Pi - Philanthropy</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,15 +21,15 @@
     <span></span>
   </button>
   <div class="sidebar" id="sidebar">
-    <div class="logo">
+    <div class="logo centered-logo">
       <img src="KTP_Logos_Letters_KTP_Logo.png" alt="KTP Logo">
     </div>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About KTP</a></li>
-        <li><a href="philanthropy.html">Philanthropy</a></li>
-        <li class="active"><a href="members.html">Members</a></li>
+        <li class="active"><a href="philanthropy.html">Philanthropy</a></li>
+        <li><a href="members.html">Members</a></li>
       </ul>
       <div class="coming-soon">More coming soon!</div>
     </nav>
