--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <ul>
         <li class="active"><a href="#home">Home</a></li>
         <li><a href="about.html">About KTP</a></li>
+        <li><a href="philanthropy.html">Philanthropy</a></li>
         <li><a href="members.html">Members</a></li>
       </ul>
       <div class="coming-soon">More coming soon!</div>
