--- a/members.html
+++ b/members.html
@@ -22,7 +22,7 @@
   </button>
   <div class="sidebar" id="sidebar">
     <div class="logo">
-      <img src="KTP_Logos_Letters_KTP_Logo.png" alt="KTP Logo">
+  <img src="placeholder.svg" alt="KTP Logo">
     </div>
     <nav>
       <ul>
@@ -36,7 +36,7 @@
   </div>
   <div class="fade-overlay" id="fadeOverlay"></div>
   <div class="logo centered-logo">
-    <img src="KTP_Logos_Letters_KTP_Logo.png" alt="KTP Logo">
+  <img src="placeholder.svg" alt="KTP Logo">
   </div>
   <script>
     const menuToggle = document.getElementById('menuToggle');
