fixed some stuff

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/lovable-uploads/favicon.png" type="image/png">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>KTP VT - Professional Technology Fraternity at Virginia Tech</title>
     <meta name="description" content="Kappa Theta Pi - The premier professional technology fraternity at Virginia Tech. Building tomorrow's tech leaders through brotherhood and innovation." />
     <meta name="author" content="KTP VT" />
@@ -11,11 +11,11 @@
     <meta property="og:title" content="KTP VT - Professional Technology Fraternity" />
     <meta property="og:description" content="Kappa Theta Pi - The premier professional technology fraternity at Virginia Tech. Building tomorrow's tech leaders through brotherhood and innovation." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ktp_vt" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/placeholder.svg" />
 
     <!-- Satoshi font from fontshare -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
