--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ktp_vt" />
-    <meta name="twitter:image" content="/placeholder.svg" />
+    <meta name="twitter:image" content="/MainLogo.svg" />
 
     <!-- Satoshi font from fontshare -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
