updating deploy instructions

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>KTP VT - Professional Technology Fraternity at Virginia Tech</title>
-    <meta name="description" content="Kappa Theta Pi - The premier professional technology fraternity at Virginia Tech. Building tomorrow's tech leaders through brotherhood and innovation." />
+    <meta name="description" content="Kappa Theta Pi - The premier professional technology fraternity at Virginia Tech." />
     <meta name="author" content="KTP VT" />
 
     <meta property="og:title" content="KTP VT - Professional Technology Fraternity" />
